[tool.poetry]
name = "gpt4all-medium"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gpt4all_medium"}]

[tool.poetry.dependencies]
python = "^3.11"
pygpt4all = "1.0.1"
pyllamacpp = "1.0.6"
langchain = "0.0.149"
unstructured = "0.6.5"
pdf2image = "1.16.3"
pytesseract = "0.3.10"
pypdf = "3.8.1"
faiss-cpu = "1.7.4"
ipykernel = "^6.23.1"
llama-cpp-python = "0.1.41"
sentence-transformers = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
